# papang

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yaml
backend/: .env  .env.example  Cargo.toml
backend/docs/: SSL_SETUP.md
backend/migrations/: 00_user_table.sql
backend/self_signed_certs/: goyav.re.key  goyav.re.pem
backend/src/: database.rs  error.rs  lib.rs  main.rs  redis.rs  server.rs  state.rs
backend/src/auth/: password.rs  routes.rs
backend/src/auth/handler/: change_password.rs  forgot_password.rs  login.rs  logout.rs  me.rs  mod.rs  open_url.rs  refresh.rs  register.rs  resend_verification.rs  reset_password.rs  verify_email.rs
backend/src/auth/token/: error.rs  mod.rs  utils.rs
backend/src/auth/token/service/: access_token.rs  mod.rs
backend/src/cache/: redis_optimized.rs
backend/src/config/: env_config.rs  env_provider.rs  error.rs  mod.rs  test_config.rs
backend/src/database/: pool.rs
backend/src/email/: mod.rs  service.rs
backend/src/expense/: handler.rs  mod.rs  repository.rs  utils.rs
backend/src/middleware/: performance.rs
backend/src/user/: model.rs  repository.rs  utils.rs
backend/src/utils/: metrics.rs
certs/: cert.csr  cert.pem  key.pem
frontend/: .env  Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  papang.rs  types.rs
frontend/src/components/: expense_edit.rs  expense_list.rs  external_link.rs  layout.rs  mod.rs
frontend/src/context/: auth.rs
frontend/src/pages/: add_expense.rs  auth.rs  dashboard.rs  expenses.rs  expenses_list.rs  forgot_password.rs  home.rs  login.rs  main.rs  manage_expenses.rs  mod.rs  profile.rs  register.rs  reset_password.rs
frontend/src/services/: api_service.rs  mod.rs  url_service.rs
migrations/: 00_user_table.sql  01_expense_table.sql
src/: lib.rs  main.rs  server.rs  validation.rs
src/auth/: mod.rs
src/auth/handler/: login.rs  mod.rs
src/auth/token/: claims.rs  response.rs
src/auth/token/repository/: refresh_token.rs
src/auth/token/service/: access_token.rs  refresh_token.rs
src/config/: env_config.rs  error.rs  mod.rs
src/expense/: models.rs
src/user/: mod.rs  model.rs  repository.rs
